sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  do{
    if (i<- 0 to m-2){
      
    }
    if (i<- m-2 to 0){
      
    }
  } while (true)
}